--- a/templates/admin/login_admin.html
+++ b/templates/admin/login_admin.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+
 
 
     <style>
@@ -89,22 +91,22 @@
                         <div class="login-button">
                             <button type="submit" class="btn btn-primary btn-lg btn-block">Entrar</button>
                         </div>
-
-
                         <div class="account-text text-center mt-3">
-                            <p>Não possui uma conta? 
-                                <a href="{{ url_for('cliente.cadastro') }}" style="color: blue; text-decoration: underline;">
-
-                            </p>
+                            <div class="text-center mt-3">
+                                <a href="{{ url_for('admin.clientes_cadastrados') }}" class="text-primary text-decoration-underline">
+                                    Criar Conta
+                                </a>
+                            </div>
                             
+                        </div>
+                           
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pYwskDr7ChyWyH/CpCKtFT8eS+0hH+W38gILK33Jw4PE1xDJU7zqWj4zdHfj1gqX" crossorigin="anonymous">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
