configuração de login e cadastro no banco de dados, finalização da tela de clientes

--- a/templates/admin/login_admin.html
+++ b/templates/admin/login_admin.html
@@ -86,20 +86,16 @@
                             </div>
                             <a href="#" class="forgot-password">Esqueci minha senha</a>
                         </div>
-
-
                         <div class="login-button">
                             <button type="submit" class="btn btn-primary btn-lg btn-block">Entrar</button>
                         </div>
                         <div class="account-text text-center mt-3">
                             <div class="text-center mt-3">
-                                <a href="{{ url_for('admin.clientes_cadastrados') }}" class="text-primary text-decoration-underline">
+                                <a href="{{ url_for('auth.cadastro') }}" class="text-primary text-decoration-underline">
                                     Criar Conta
                                 </a>
                             </div>
-                            
-                        </div>
-                           
+                        </div>                
                 </div>
             </div>
         </div>
