--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -80,7 +80,7 @@
         <a href="#"><i class="fas fa-headset"></i> Suporte</a>
 
         <div class="logout-btn">
-            <a href="{{ url_for('admin.logout_admin') }}" class="btn btn-danger">
+            <a href="{{ url_for('auth.logout') }}" class="btn btn-danger">
                 <i class="fas fa-sign-out-alt"></i> Sair
             </a>
         </div>
